@@ -536,35 +536,87 @@ operator|!=
 literal|null
 condition|)
 block|{
+name|QueryExp
+name|exp
+init|=
+name|Query
+operator|.
+name|eq
+argument_list|(
+name|Query
+operator|.
+name|attr
+argument_list|(
+literal|"coreHashCode"
+argument_list|)
+argument_list|,
+name|Query
+operator|.
+name|value
+argument_list|(
+name|coreHashCode
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|Set
+argument_list|<
+name|ObjectName
+argument_list|>
+name|objectNames
+init|=
+name|server
+operator|.
+name|queryNames
+argument_list|(
+literal|null
+argument_list|,
+name|exp
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|objectNames
+operator|!=
+literal|null
+condition|)
+block|{
 for|for
 control|(
-name|Map
-operator|.
-name|Entry
-argument_list|<
-name|String
-argument_list|,
-name|SolrInfoMBean
-argument_list|>
-name|entry
+name|ObjectName
+name|name
 range|:
-name|entrySet
-argument_list|()
+name|objectNames
 control|)
 block|{
-name|unregister
+try|try
+block|{
+name|server
+operator|.
+name|unregisterMBean
 argument_list|(
-name|entry
-operator|.
-name|getKey
-argument_list|()
-argument_list|,
-name|entry
-operator|.
-name|getValue
-argument_list|()
+name|name
 argument_list|)
 expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|Exception
+name|e
+parameter_list|)
+block|{
+name|LOG
+operator|.
+name|error
+argument_list|(
+literal|"Exception un-registering mbean {}"
+argument_list|,
+name|name
+argument_list|,
+name|e
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 block|}
 block|}
 name|super
