@@ -5977,44 +5977,6 @@ block|}
 block|}
 try|try
 block|{
-name|infoRegistry
-operator|.
-name|clear
-argument_list|()
-expr_stmt|;
-block|}
-catch|catch
-parameter_list|(
-name|Throwable
-name|e
-parameter_list|)
-block|{
-name|SolrException
-operator|.
-name|log
-argument_list|(
-name|log
-argument_list|,
-name|e
-argument_list|)
-expr_stmt|;
-if|if
-condition|(
-name|e
-operator|instanceof
-name|Error
-condition|)
-block|{
-throw|throw
-operator|(
-name|Error
-operator|)
-name|e
-throw|;
-block|}
-block|}
-try|try
-block|{
 if|if
 condition|(
 literal|null
@@ -6187,6 +6149,44 @@ comment|// For the case that a searcher was registered *before* warming
 comment|// then the searchExecutor will throw an exception when getSearcher()
 comment|// tries to use it, and the exception handling code should close it.
 name|closeSearcher
+argument_list|()
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|Throwable
+name|e
+parameter_list|)
+block|{
+name|SolrException
+operator|.
+name|log
+argument_list|(
+name|log
+argument_list|,
+name|e
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|e
+operator|instanceof
+name|Error
+condition|)
+block|{
+throw|throw
+operator|(
+name|Error
+operator|)
+name|e
+throw|;
+block|}
+block|}
+try|try
+block|{
+name|infoRegistry
+operator|.
+name|clear
 argument_list|()
 expr_stmt|;
 block|}
